Bug 353664 - KF5 based kaddressbook / kleopatra regrssion: gpg keys are no longer stored
Summary: KF5 based kaddressbook / kleopatra regrssion: gpg keys are no longer stored
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-07 20:01 UTC by Christian (Fuchs)
Modified: 2015-11-29 07:33 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2015-10-07 20:01:27 UTC
In KDE 4 based versions of kmail/kaddressbook it was possible to save which gpg key(s) to use when writing E-Mails to a person.  The dialogue still pops up and offers doing so, but as apparently the new kaddressbook no longer offers a field for that, the keys are not stored.

Reproducible: Always

Steps to Reproduce:
1. Have a person  (E-Mail address, actually) with multiple GPG keys in kleopatra
2. Try sending this person an e-mail
3. Tell kmail to save the setting (in kaddressbook) 

Actual Results:  
The key(s) / settings are not saved

Expected Results:  
They are saved
Comment 1 Bernhard Lindner 2015-11-28 23:04:29 UTC
In Kubuntu 15.04 I could found the follwoing settings tab for each contact: https://media-cdn.ubuntu-de.org/wiki/attachments/52/28/kaddressbook_pgp.png

After upgrade to Kubuntu 15.10 the tab is gone. I need to change the contact specific encryption settings. How can I do this without the tab?
Comment 2 Laurent Montel 2015-11-29 07:05:50 UTC
Indeed crypto page is not show!
I will fix it soon
Comment 3 Laurent Montel 2015-11-29 07:33:08 UTC
Git commit f578d0458b50a48d83c306a394d2abc5e6bd41ab by Montel Laurent.
Committed on 29/11/2015 at 07:32.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 353664 - KF5 based kaddressbook / kleopatra regrssion: gpg keys are no longer stored

FIXED-IN: 5.1

M  +2    -2    akonadi-contact/src/config-akonadi-contact.h.cmake
M  +2    -1    akonadi-contact/src/editor/contacteditorwidget.cpp

http://commits.kde.org/kdepimlibs/f578d0458b50a48d83c306a394d2abc5e6bd41ab