Fix Bug 353664 - KF5 based kaddressbook / kleopatra regrssion: gpg keys are no longer stored

FIXED-IN: 5.1
BUG: 353664