akonadi-contact/src/editor/contacteditorwidget.cpp
@@ -495,8 +495,9 @@ void ContactEditorWidget::Private::loadCustomPages()
     qDeleteAll(mCustomPages);
     mCustomPages.clear();
 
-    const QString pluginDirectory = QStringLiteral("%1/%2/akonadi/contact/editorpageplugins/").arg(QStringLiteral(AKONADI_CONTACT_LIB)).arg(QStringLiteral(AKONADI_CONTACT_PREFIX));
+    const QString pluginDirectory = QStringLiteral("%1/akonadi/contact/editorpageplugins/").arg(QStringLiteral(AKONADI_CONTACT_LIB));
     QDirIterator it(pluginDirectory, QDir::Files);
+
     while (it.hasNext()) {
         QPluginLoader loader(it.next());
         if (!loader.load()) {
